tests/ui/marker_trait_attr/marker-attribute-on-non-trait.stderr
error: the `marker` attribute cannot be used on structs
  --> $DIR/marker-attribute-on-non-trait.rs:3:3
   |
LL | #[marker]
   |   ^^^^^^
   |
   = help: the `marker` attribute can only be applied to traits

error: the `marker` attribute cannot be used on inherent impl blocks
  --> $DIR/marker-attribute-on-non-trait.rs:6:3
   |
LL | #[marker]
   |   ^^^^^^
   |
   = help: the `marker` attribute can only be applied to traits

error: the `marker` attribute cannot be used on unions
  --> $DIR/marker-attribute-on-non-trait.rs:9:3
   |
LL | #[marker]
   |   ^^^^^^
   |
   = help: the `marker` attribute can only be applied to traits

error: the `marker` attribute cannot be used on constants
  --> $DIR/marker-attribute-on-non-trait.rs:14:3
   |
LL | #[marker]
   |   ^^^^^^
   |
   = help: the `marker` attribute can only be applied to traits

error: the `marker` attribute cannot be used on functions
  --> $DIR/marker-attribute-on-non-trait.rs:17:3
   |
LL | #[marker]
   |   ^^^^^^
   |
   = help: the `marker` attribute can only be applied to traits

error: the `marker` attribute cannot be used on type aliases
  --> $DIR/marker-attribute-on-non-trait.rs:20:3
   |
LL | #[marker]
   |   ^^^^^^
   |
   = help: the `marker` attribute can only be applied to traits

error: aborting due to 6 previous errors

